Added loggig, added profiling, enhanced comments and docstrings, shrinked size of app window