@@ -1,17 +1,25 @@
 package com.christoph.webbrowserinjava;
 
+// Arrays for list manipulation.
 import java.util.Arrays;
+// List for using collection.
 import java.util.List;
 
 public class URLAutoComplete {
 
-    // List of common domain extensions
+    // List of common domain extensions that can be appended to URLs.
     private static final List<String> DOMAIN_EXTENSIONS = Arrays.asList(
             ".com", ".org", ".net", ".edu", ".gov", ".co", ".io", ".info", ".biz", ".tv", ".me"
             // Add more extensions as needed
     );
 
-    // Method to suggest completing the URL
+    /**
+     * Suggests a completed URL based on the given partial URL.
+     * It ensures the URL has a protocol, adds "www." if missing, and appends a domain extension if needed.
+     *
+     * @param partialUrl The partially entered URL by the user.
+     * @return A suggested complete URL.
+     */
     public static String suggestCompletion(String partialUrl) {
         // Check if the partial URL starts with "https://"
         if (!partialUrl.startsWith("https://")) {
@@ -36,7 +44,7 @@ public class URLAutoComplete {
 
         // If not, suggest completing with the first domain extension
         if (!hasExtension && !DOMAIN_EXTENSIONS.isEmpty()) {
-            String firstExtension = DOMAIN_EXTENSIONS.get(0);
+            String firstExtension = DOMAIN_EXTENSIONS.getFirst();
             if (!partialUrl.endsWith(firstExtension)) {
                 partialUrl += firstExtension;
             }
@@ -46,7 +54,12 @@ public class URLAutoComplete {
         return partialUrl;
     }
 
-    // Method to add "www." prefix to the URL
+    /**
+     * Adds the "www." prefix to a given URL if it is not already present.
+     *
+     * @param url The URL to which "www." may be added.
+     * @return The URL with "www." prefix added.
+     */
     static String addWwwPrefix(String url) {
         // Split the URL into protocol and the rest of the URL
         int protocolEndIndex = url.indexOf("://") + 3;
